@@ -8,6 +8,7 @@ TODO: remove this file
 * sound is no longer upside-down (test eg. with hrtf)
 * got rid of BS. (gain is still the same everywhere)
 * sound handles are now userdata => method syntax; ids are owned and garbage collected
+* sounds are paused while in pause menu in singleplayer
 
 
 TODO:
